logs/django-wechats.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django-wechats'...
Compiling './lib/python3.5/site-packages/django-wechats/Sample.py'...
***   File "./lib/python3.5/site-packages/django-wechats/Sample.py", line 40
    print "ERR: VerifyURL ret: " + ret
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/django-wechats/WXBizMsgCrypt.py'...
***   File "./lib/python3.5/site-packages/django-wechats/WXBizMsgCrypt.py", line 53
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django-wechats/address_book.py'...
***   File "./lib/python3.5/site-packages/django-wechats/address_book.py", line 118
    print self.extattr
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/django_wechats-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
